--- a/src/sass/lib/_common.sass
+++ b/src/sass/lib/_common.sass
@@ -186,7 +186,7 @@ img
 	 =================================== */
 .screen
 	height: 0
-	min-height: 840px
+	min-height: 100vh
 	background: url(../img/bg/screen.jpg) center center no-repeat
 	background-size: cover
 	&__container
