--- a/src/jade/includes/_header.pug
+++ b/src/jade/includes/_header.pug
@@ -2,8 +2,9 @@ header.header
 	.container
 		// begin logo
 		.header__logo.logo
-			a.logo__link(href="index.html")
-				img.logo__img(src="img/logo.png" alt="Logo")
+			h1.logo__none Perfect Wedding
+			a.logo__link(href="index.html" title='Perfect Wedding')
+				img.logo__img(src="img/logo.png" alt="Perfect Wedding")
 		// end logo
 		.header__right
 			.header__address Самара, посёлок Дома ЭМО,
