--- a/src/sass/lib/_svg-sprite.scss
+++ b/src/sass/lib/_svg-sprite.scss
@@ -11,3 +11,13 @@
   width: 4.8em;
   height: 1em;
 }
+.icon-close {
+  font-size: 47.971px;
+  width: 1em;
+  height: 1em;
+}
+.icon-heart {
+  font-size: 15px;
+  width: 1.2em;
+  height: 1em;
+}
