--- a/src/sass/lib/_common.sass
+++ b/src/sass/lib/_common.sass
@@ -36,6 +36,8 @@ body
 	font-size: 15px
 	color: $primary
 	line-height: 1.2
+	&.is-locked
+		overflow: hidden
 
 .wrapper
 	position: relative
@@ -106,11 +108,11 @@ img
 	border-radius: 5px
 	border: 1px solid transparent
 	background-color: transparent
-	+smooth
 	+trs
 	&_red
 		color: #ffffff
 		background-color: $red
+		+smooth
 		&:hover,
 		&:active
 			background-color: darken($red,10)
@@ -124,10 +126,21 @@ img
 		&:active
 			color: #ffffff
 			background-color: #624b3d
+	&_white
+		+museo-300
+		color: #ffffff
+		background-color: transparent
+		border-color: #ffffff
+		padding: 10px 20px
+		&:hover,
+		&:active
+			color: $red
+			background-color: #fff
 			
 .title
 	position: relative
 	padding-bottom: 35px
+	font-weight: normal
 	&:before
 		content: ''
 		position: absolute
@@ -168,6 +181,17 @@ img
 		color: $red
 		display: block
 		float: right
+		+trs
+		&:hover,
+		&:active
+			color: darken($red,10)
+			
+.logo
+	&__none
+		opacity: 0
+		visibility: hidden
+		font-size: 0
+		height: 0
 		
 
 /* ===================================
@@ -577,9 +601,281 @@ img
 		opacity: 0.8
 	&__img
 		border-radius: 5px
+		
+/* ===================================
+	 Call
+	 =================================== */
+.call
+	margin-top: -90px
+	min-height: 413px
+	background: url(../img/bg/call.png) top center no-repeat
+	background-size: 100%
+	+r(1919)
+		background-size: auto
+	&__row
+		width: 100%
+		max-width: 900px
+		margin-left: auto
+		margin-right: auto
+		display: table
+	&__col
+		display: table-cell
+		vertical-align: top
+		text-align: right
+		width: 42%
+		& + &
+			width: 58%
+	&__convert
+		display: inline-block
+		position: relative
+		margin-top: 15px
+	&__title
+		position: absolute
+		z-index: 1
+		bottom: 155px
+		text-align: center
+		left: 0
+		right: 0
+		+museo-700
+		font-size: 18px
+		color: #000000
+		margin-left: -75px
+		transform: rotate(9deg)
+	&__subtitle
+		position: absolute
+		z-index: 1
+		bottom: 90px
+		text-align: center
+		left: 0
+		right: 0
+		+museo-700
+		font-size: 18px
+		color: $red
+		margin-left: -100px
+		transform: rotate(9deg)
+	&__form
+		margin-top: 150px
+		display: inline-block
+		position: relative
+		&:before
+			content: ''
+			position: absolute
+			z-index: 1
+			top: 30px
+			right: 100%
+			margin-right: 60px
+			+s(form)
 	
+/* Form
+	----------------------------------- */
+.form
+	width: 100%
+	max-width: 250px
+	text-align: left
+	&__field
+		position: relative
+		+pie-clearfix
+		& + &
+			margin-top: 15px
+		.help-block
+			margin-left: 5px
+			+museo-700
+			color: #ffffff
+			font-size: 12px
+			+smooth
+	&__input
+		padding: 0 20px
+		font-family: inherit
+		font-size: inherit
+		width: 100%
+		height: 43px
+		color: $primary
+		line-height: 43px
+		background-color: white
+		border-radius: 5px
+		+placeholder-color(#756b66)
+	&__submit
+		text-align: center
+		padding-left: 0
+		padding-right: 0
+		width: 100%
+	
+/* ===================================
+	 Rate
+	 =================================== */
+.rate
+	position: relative
+	z-index: 2
+	margin-top: -60px
+	padding-top: 90px
+	padding-bottom: 65px
+	background: url(../img/bg/rate.jpg) center center no-repeat
+	background-size: cover
+	&__title
+		+museo-700
+		color: $light
+		font-size: 30px
+		text-align: center
+	&__row
+		margin-top: 30px
+		+pie-clearfix
+	&__card
+		float: left
+		width: 33.33%
+		
+.card
+	text-align: center
+	&__image
+		overflow: hidden
+		margin-left: auto
+		margin-right: auto
+		width: 150px
+		height: 150px
+		border-radius: 50%
+	&__name
+		margin-top: 14px
+		+museo-700
+		color: #000000
+		font-size: 18px
+	&__text
+		margin-top: 9px
+		padding-left: 15px
+		padding-right: 15px
+		font-size: 18px
+	&__rate
+		margin-top: 10px
+		font-size: 0
+		color: $red
+		.icon
+			margin: 0 5px
+			font-size: 14px
+		&[data-rate="1"]
+			.icon:nth-child(1) ~ .icon
+				color: $primary
+				opacity: 0.5
+		&[data-rate="2"]
+			.icon:nth-child(2) ~ .icon
+				color: $primary
+				opacity: 0.5
+		&[data-rate="3"]
+			.icon:nth-child(3) ~ .icon
+				color: $primary
+				opacity: 0.5
+		&[data-rate="4"]
+			.icon:nth-child(4) ~ .icon
+				color: $primary
+				opacity: 0.5
+		&[data-rate="5"]
+			.icon:nth-child(5) ~ .icon
+				color: $primary
+				opacity: 0.5
+	&__row
+		margin-top: 20px
+	&__btn
+		padding: 10px
+		margin-right: 5px
+		+museo-300
+		-webkit-font-smoothing: subpixel-antialiased
+		& + &
+			margin-left: 5px
+			margin-right: 0
+	&__info
+		margin-top: 20px
+		+museo-700
+		font-size: 18px
+		color: #000000
+		
+/* ===================================
+	 About
+	 =================================== */
+.about
+	&__row
+		+pie-clearfix
+	&__col
+		float: left
+		width: 35%
+		& + &
+			width: 65%
+	&__title
+		margin-bottom: 35px
+		+museo-700
+		color: $light
+		font-size: 30px
+		&:before
+			left: 0
+			transform: none
+	&__label
+		+museo-700
+		font-size: 16px
+		color: #000000
+	&__text
+		font-size: 16px
+		line-height: 1.6
+		&_mail
+			color: $red
+			text-decoration: underline
+			+trs
+			&:hover
+				color: darken($red,10)
+				text-decoration: underline
+	&__text + &__label
+		margin-top: 15px
+
 
 /* ===================================
 	 Other Styles
 	 =================================== */
 
+/* Modal
+	----------------------------------- */
+.modal
+	display: none
+	cursor: pointer
+	position: fixed
+	z-index: 101
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	height: 100%
+	width: 100%
+	overflow: auto
+	padding: 20px
+	font-size: 18px
+	background-color: rgba(17, 17, 17, .78)
+	+vertical
+	&__in
+		cursor: default
+		overflow: hidden
+		position: relative
+		display: inline-block
+		min-width: 360px
+		max-width: 450px
+		font-size: 18px
+		vertical-align: middle
+		background-color: #ffffff
+		border-radius: 5px
+		+r(479)
+			min-width: 0
+	&__close
+		cursor: pointer
+		position: absolute
+		top: 7px
+		right: 7px
+		z-index: 1
+		color: #ffffff
+		.icon
+			font-size: 16px
+	&__head
+		padding: 7px 15px
+		font-size: 20px
+		color: #ffffff
+		background-color: $red
+	&__main
+		padding: 30px
+		+r(479)
+			padding-left: 15px
+			padding-right: 15px
+	&__text
+		& + &
+			margin-top: 14px
