--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -285,5 +285,5 @@ block content
 					.about__label E-mail:
 					a.about__text.about__text_mail(href='mailto:info@svadba.ru') info@svadba.ru
 				.about__col
-					.map#map
+					.about__map#map
 	//end about
