--- a/src/sass/lib/_common.sass
+++ b/src/sass/lib/_common.sass
@@ -820,6 +820,9 @@ img
 				text-decoration: underline
 	&__text + &__label
 		margin-top: 15px
+	&__map
+		width: 100%
+		height: 340px
 
 
 /* ===================================
