--- a/src/jade/includes/_footer.pug
+++ b/src/jade/includes/_footer.pug
@@ -1,12 +1,10 @@
-//block footToggle
-//	-var footToggle = ''
-//-var footMenu = ['Menu 1', 'Menu 2', 'Menu 3', 'Menu 4']
-//footer.footer
-//	.container
-//		span.footer__copy &copy; Template
-//		nav.footer__nav
-//			each value in footMenu
-//				if footToggle === value
-//					a.footer__nav-link.is-active(href='#')= value
-//				else
-//					a.footer__nav-link(href='#')= value
+footer.footer
+	.container
+		// begin logo
+		.footer__logo.logo
+			a.logo__link(href="index.html" title='Perfect Wedding')
+				img.logo__img(src="img/logo.png" alt="Perfect Wedding")
+		// end logo
+		.footer__right
+			.footer__act Создано студией
+				a.footer__act-link(href='#' target='_blank') “Актиком”
