--- a/src/jade/modals/modal_ty.pug
+++ b/src/jade/modals/modal_ty.pug
@@ -1,9 +1,8 @@
 include ../includes/_mixins
 
-.modal.js-modal
-	.modal__in
-		button.modal__close.js-modal-close(type='button')
-			+i('close')
-		.modal__head Отправлено
-		.modal__main
-			p.modal__text Ваша заяка принята, мы свяжемся с Вами в ближайшее время.
+.modal__in
+	button.modal__close.lol.js-modal-close(type='button')
+		+i('close')
+	.modal__head Отправлено
+	.modal__main
+		p.modal__text Ваша заяка принята, мы свяжемся с Вами в ближайшее время.
