--- a/src/jade/includes/_layout.pug
+++ b/src/jade/includes/_layout.pug
@@ -23,4 +23,4 @@ html
     include _footer
     block js
       script(src="js/app.js")
-      script(src="https://maps.googleapis.com/maps/api/js")
+      script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5P4IIFsySgMjMwG2dtuJiMUcg5X6gg0")
